kubernetes/apps/immich-album-sync/ciliumnetworkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: immich-album-sync
  namespace: immich-album-sync
  labels:
    app.kubernetes.io/name: immich-album-sync
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: immich-album-sync
  ingress: []
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: immich.mbhome.biz
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
